--- a/ui/employeeAddConsignment.ui
+++ b/ui/employeeAddConsignment.ui
@@ -40,8 +40,8 @@ background-color: white;
   <widget class="QLabel" name="employee_name">
    <property name="geometry">
     <rect>
-     <x>150</x>
-     <y>350</y>
+     <x>10</x>
+     <y>400</y>
      <width>251</width>
      <height>61</height>
     </rect>
@@ -57,8 +57,8 @@ font: 75 24pt &quot;League Spartan&quot;;</string>
   <widget class="QLabel" name="employeeIDHeading">
    <property name="geometry">
     <rect>
-     <x>190</x>
-     <y>460</y>
+     <x>20</x>
+     <y>490</y>
      <width>161</width>
      <height>31</height>
     </rect>
@@ -74,8 +74,8 @@ font: 75 16pt &quot;League Spartan&quot;;</string>
   <widget class="QLabel" name="Emailaddress_heading">
    <property name="geometry">
     <rect>
-     <x>180</x>
-     <y>550</y>
+     <x>20</x>
+     <y>540</y>
      <width>191</width>
      <height>31</height>
     </rect>
@@ -91,7 +91,7 @@ font: 75 16pt &quot;League Spartan&quot;;</string>
   <widget class="QLabel" name="branchHeading">
    <property name="geometry">
     <rect>
-     <x>210</x>
+     <x>20</x>
      <y>640</y>
      <width>111</width>
      <height>41</height>
@@ -108,10 +108,10 @@ font: 75 16pt &quot;League Spartan&quot;;</string>
   <widget class="QLabel" name="employeeIDLabel">
    <property name="geometry">
     <rect>
-     <x>210</x>
-     <y>500</y>
-     <width>111</width>
-     <height>21</height>
+     <x>190</x>
+     <y>490</y>
+     <width>141</width>
+     <height>31</height>
     </rect>
    </property>
    <property name="styleSheet">
@@ -125,9 +125,9 @@ font: 25 16pt &quot;Calibri&quot;;</string>
   <widget class="QLabel" name="emailIDLabel">
    <property name="geometry">
     <rect>
-     <x>140</x>
-     <y>570</y>
-     <width>281</width>
+     <x>20</x>
+     <y>580</y>
+     <width>491</width>
      <height>51</height>
     </rect>
    </property>
@@ -142,10 +142,10 @@ font: 25 16pt &quot;Calibri&quot;;</string>
   <widget class="QLabel" name="branchLabel">
    <property name="geometry">
     <rect>
-     <x>150</x>
-     <y>670</y>
+     <x>130</x>
+     <y>640</y>
      <width>211</width>
-     <height>111</height>
+     <height>41</height>
     </rect>
    </property>
    <property name="styleSheet">
@@ -153,7 +153,7 @@ font: 25 16pt &quot;Calibri&quot;;</string>
 font: 25 16pt &quot;Calibri&quot;;</string>
    </property>
    <property name="text">
-    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;No 28 Gupta Road,&lt;br/&gt;Anna Nagar,&lt;br/&gt;Chennai, 600010&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;dffg&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </widget>
   <widget class="QLabel" name="label">
