--- a/ui/employeeTruckConfirm.ui
+++ b/ui/employeeTruckConfirm.ui
@@ -40,7 +40,7 @@ background-color: white;
   <widget class="QLabel" name="employee_name">
    <property name="geometry">
     <rect>
-     <x>20</x>
+     <x>30</x>
      <y>410</y>
      <width>411</width>
      <height>61</height>
@@ -57,7 +57,7 @@ font: 75 24pt &quot;League Spartan&quot;;</string>
   <widget class="QLabel" name="employeeIDHeading">
    <property name="geometry">
     <rect>
-     <x>20</x>
+     <x>30</x>
      <y>470</y>
      <width>171</width>
      <height>41</height>
@@ -74,7 +74,7 @@ font: 75 16pt &quot;League Spartan&quot;;</string>
   <widget class="QLabel" name="Emailaddress_heading">
    <property name="geometry">
     <rect>
-     <x>20</x>
+     <x>30</x>
      <y>520</y>
      <width>191</width>
      <height>31</height>
@@ -91,7 +91,7 @@ font: 75 16pt &quot;League Spartan&quot;;</string>
   <widget class="QLabel" name="branchHeading">
    <property name="geometry">
     <rect>
-     <x>20</x>
+     <x>30</x>
      <y>600</y>
      <width>111</width>
      <height>41</height>
@@ -108,7 +108,7 @@ font: 75 16pt &quot;League Spartan&quot;;</string>
   <widget class="QLabel" name="employeeIDLabel">
    <property name="geometry">
     <rect>
-     <x>200</x>
+     <x>210</x>
      <y>470</y>
      <width>151</width>
      <height>41</height>
@@ -125,7 +125,7 @@ font: 25 16pt &quot;Calibri&quot;;</string>
   <widget class="QLabel" name="emailIDLabel">
    <property name="geometry">
     <rect>
-     <x>20</x>
+     <x>30</x>
      <y>550</y>
      <width>501</width>
      <height>51</height>
@@ -142,7 +142,7 @@ font: 25 16pt &quot;Calibri&quot;;</string>
   <widget class="QLabel" name="branchLabel">
    <property name="geometry">
     <rect>
-     <x>130</x>
+     <x>140</x>
      <y>600</y>
      <width>211</width>
      <height>41</height>
@@ -159,8 +159,8 @@ font: 25 16pt &quot;Calibri&quot;;</string>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>650</x>
-     <y>20</y>
+     <x>630</x>
+     <y>30</y>
      <width>211</width>
      <height>91</height>
     </rect>
@@ -177,8 +177,8 @@ font: 75 48pt &quot;League Spartan&quot;;
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>650</x>
-     <y>100</y>
+     <x>640</x>
+     <y>130</y>
      <width>581</width>
      <height>61</height>
     </rect>
@@ -188,14 +188,14 @@ font: 75 48pt &quot;League Spartan&quot;;
 font: 75 28pt &quot;League Spartan&quot;;</string>
    </property>
    <property name="text">
-    <string>Confirm truck arrival</string>
+    <string>Confirm Arrival</string>
    </property>
   </widget>
   <widget class="QPushButton" name="confirmTruckButton">
    <property name="geometry">
     <rect>
-     <x>970</x>
-     <y>250</y>
+     <x>980</x>
+     <y>270</y>
      <width>251</width>
      <height>61</height>
     </rect>
@@ -266,8 +266,8 @@ color: rgb(222, 24, 24);
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>650</x>
-     <y>150</y>
+     <x>640</x>
+     <y>200</y>
      <width>511</width>
      <height>61</height>
     </rect>
@@ -282,11 +282,210 @@ color: rgb(222, 24, 24);
   <widget class="QComboBox" name="comboBox">
    <property name="geometry">
     <rect>
-     <x>650</x>
-     <y>270</y>
+     <x>640</x>
+     <y>290</y>
      <width>241</width>
      <height>22</height>
     </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_15">
+   <property name="geometry">
+    <rect>
+     <x>640</x>
+     <y>700</y>
+     <width>121</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(222,24,24);
+font: 25 14pt &quot;Calibri&quot;;</string>
+   </property>
+   <property name="text">
+    <string>NumberPlate</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_18">
+   <property name="geometry">
+    <rect>
+     <x>640</x>
+     <y>410</y>
+     <width>321</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 75 24pt &quot;League Spartan&quot;;
+color: rgb(222,24,24);
+</string>
+   </property>
+   <property name="text">
+    <string>Change Driver</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_19">
+   <property name="geometry">
+    <rect>
+     <x>640</x>
+     <y>620</y>
+     <width>161</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(222,24,24);
+font: 25 14pt &quot;Calibri&quot;;</string>
+   </property>
+   <property name="text">
+    <string>Driver's Mobile No</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_20">
+   <property name="geometry">
+    <rect>
+     <x>640</x>
+     <y>450</y>
+     <width>531</width>
+     <height>81</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">font: 25 18pt &quot;Calibri&quot;;</string>
+   </property>
+   <property name="text">
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:14pt;&quot;&gt;Change driver of the truck of this number plate&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_21">
+   <property name="geometry">
+    <rect>
+     <x>640</x>
+     <y>540</y>
+     <width>121</width>
+     <height>16</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(222,24,24);
+font: 25 14pt &quot;Calibri&quot;;</string>
+   </property>
+   <property name="text">
+    <string>Driver's name</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="driverName">
+   <property name="geometry">
+    <rect>
+     <x>630</x>
+     <y>560</y>
+     <width>381</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Calibri</family>
+     <pointsize>12</pointsize>
+     <weight>3</weight>
+     <italic>false</italic>
+     <bold>false</bold>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: #fff3f3;
+border-style: outset;
+border-width: 2px;
+border-radius: 15px;
+border-color: #fff3f3;
+padding-left: 10px;
+font: 25 12pt &quot;Calibri&quot;;
+color: #808080</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="numberPlate">
+   <property name="geometry">
+    <rect>
+     <x>630</x>
+     <y>720</y>
+     <width>381</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Calibri</family>
+     <pointsize>12</pointsize>
+     <weight>3</weight>
+     <italic>false</italic>
+     <bold>false</bold>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: #fff3f3;
+border-style: outset;
+border-width: 2px;
+border-radius: 15px;
+border-color: #fff3f3;
+padding-left: 10px;
+font: 25 12pt &quot;Calibri&quot;;
+color: #808080</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="driverNumber">
+   <property name="geometry">
+    <rect>
+     <x>630</x>
+     <y>640</y>
+     <width>381</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Calibri</family>
+     <pointsize>12</pointsize>
+     <weight>3</weight>
+     <italic>false</italic>
+     <bold>false</bold>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: #fff3f3;
+border-style: outset;
+border-width: 2px;
+border-radius: 15px;
+border-color: #fff3f3;
+padding-left: 10px;
+font: 25 12pt &quot;Calibri&quot;;
+color: #808080</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="changeDriverButton">
+   <property name="geometry">
+    <rect>
+     <x>1050</x>
+     <y>710</y>
+     <width>261</width>
+     <height>61</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton{
+font: 75 20pt &quot;League Spartan&quot;;
+color: white;
+background-color: rgb(222, 24, 24);
+border-radius: 15px
+}
+QPushButton:hover{
+background-color: '#eeeeee';
+color: rgb(222, 24, 24);
+border: 2px;
+border-color: rgb(222,24,24)
+}</string>
+   </property>
+   <property name="text">
+    <string>Change Driver</string>
    </property>
   </widget>
   <zorder>label_10</zorder>
@@ -304,6 +503,15 @@ color: rgb(222, 24, 24);
   <zorder>backButton</zorder>
   <zorder>label_3</zorder>
   <zorder>comboBox</zorder>
+  <zorder>label_15</zorder>
+  <zorder>label_18</zorder>
+  <zorder>label_19</zorder>
+  <zorder>label_20</zorder>
+  <zorder>label_21</zorder>
+  <zorder>driverName</zorder>
+  <zorder>numberPlate</zorder>
+  <zorder>driverNumber</zorder>
+  <zorder>changeDriverButton</zorder>
  </widget>
  <resources/>
  <connections/>
