--- a/ui/viewEmployeeUtil.ui
+++ b/ui/viewEmployeeUtil.ui
@@ -137,21 +137,21 @@ color: rgb(222,24,24);
        <x>60</x>
        <y>100</y>
        <width>421</width>
-       <height>61</height>
+       <height>101</height>
       </rect>
      </property>
      <property name="styleSheet">
       <string notr="true">font: 25 13pt &quot;Calibri&quot;;</string>
      </property>
      <property name="text">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Enter the details of the employee you wish&lt;br/&gt;to view. Fill any field to search&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Enter the details of the employee you wish&lt;br/&gt;to view. Fill any field to search.&lt;/p&gt;&lt;p&gt;Or fire an employee after entering his ID&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
     </widget>
     <widget class="QLabel" name="label_11">
      <property name="geometry">
       <rect>
        <x>70</x>
-       <y>170</y>
+       <y>220</y>
        <width>121</width>
        <height>16</height>
       </rect>
@@ -168,7 +168,7 @@ font: 25 14pt &quot;Calibri&quot;;</string>
      <property name="geometry">
       <rect>
        <x>60</x>
-       <y>190</y>
+       <y>240</y>
        <width>381</width>
        <height>41</height>
       </rect>
@@ -196,8 +196,8 @@ color: #808080</string>
     <widget class="QPushButton" name="searchButton">
      <property name="geometry">
       <rect>
-       <x>540</x>
-       <y>210</y>
+       <x>560</x>
+       <y>160</y>
        <width>191</width>
        <height>61</height>
       </rect>
@@ -224,7 +224,7 @@ border-color: rgb(222,24,24)
      <property name="geometry">
       <rect>
        <x>60</x>
-       <y>260</y>
+       <y>310</y>
        <width>381</width>
        <height>41</height>
       </rect>
@@ -253,7 +253,7 @@ color: #808080</string>
      <property name="geometry">
       <rect>
        <x>70</x>
-       <y>240</y>
+       <y>290</y>
        <width>121</width>
        <height>16</height>
       </rect>
@@ -270,7 +270,7 @@ font: 25 14pt &quot;Calibri&quot;;</string>
      <property name="geometry">
       <rect>
        <x>60</x>
-       <y>350</y>
+       <y>370</y>
        <width>341</width>
        <height>51</height>
       </rect>
@@ -288,7 +288,7 @@ color: rgb(222,24,24);
      <property name="geometry">
       <rect>
        <x>20</x>
-       <y>420</y>
+       <y>440</y>
        <width>811</width>
        <height>301</height>
       </rect>
@@ -328,6 +328,33 @@ color: rgb(222,24,24);
        <string>Joining Date</string>
       </property>
      </column>
+    </widget>
+    <widget class="QPushButton" name="fireButton">
+     <property name="geometry">
+      <rect>
+       <x>560</x>
+       <y>250</y>
+       <width>191</width>
+       <height>61</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">QPushButton{
+font: 75 20pt &quot;League Spartan&quot;;
+color: white;
+background-color: rgb(222, 24, 24);
+border-radius: 15px
+}
+QPushButton:hover{
+background-color: '#eeeeee';
+color: rgb(222, 24, 24);
+border: 2px;
+border-color: rgb(222,24,24)
+}</string>
+     </property>
+     <property name="text">
+      <string>Fire</string>
+     </property>
     </widget>
    </widget>
   </widget>
