--- a/ui/managerHome.ui
+++ b/ui/managerHome.ui
@@ -488,7 +488,7 @@ background-color: &quot;#222222&quot;
     <property name="geometry">
      <rect>
       <x>30</x>
-      <y>340</y>
+      <y>520</y>
       <width>391</width>
       <height>281</height>
      </rect>
@@ -601,6 +601,81 @@ color: #808080</string>
      </property>
     </widget>
    </widget>
+   <widget class="QWidget" name="consignmentsWidget_3" native="true">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>220</y>
+      <width>391</width>
+      <height>281</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: white;
+border-radius: 10px</string>
+    </property>
+    <widget class="QPushButton" name="viewStatButton">
+     <property name="geometry">
+      <rect>
+       <x>100</x>
+       <y>170</y>
+       <width>181</width>
+       <height>61</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">QPushButton{
+font: 75 20pt &quot;League Spartan&quot;;
+color: white;
+background-color: rgb(222, 24, 24);
+border-radius: 15px
+}
+QPushButton:hover{
+background-color: '#eeeeee';
+color: rgb(222, 24, 24);
+border: 2px;
+border-color: rgb(222,24,24)
+}</string>
+     </property>
+     <property name="text">
+      <string>View</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_16">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>80</y>
+       <width>351</width>
+       <height>61</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">font: 25 12pt &quot;Calibri&quot;;</string>
+     </property>
+     <property name="text">
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;See the average waiting time of consignments&lt;/p&gt;&lt;p&gt; in hours per branch&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_17">
+     <property name="geometry">
+      <rect>
+       <x>90</x>
+       <y>20</y>
+       <width>271</width>
+       <height>51</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">font: 75 24pt &quot;League Spartan&quot;;
+color: rgb(222,24,24);
+text-decoration: underline;</string>
+     </property>
+     <property name="text">
+      <string>Statistics</string>
+     </property>
+    </widget>
+   </widget>
    <zorder>label</zorder>
    <zorder>label_2</zorder>
    <zorder>label_3</zorder>
@@ -610,6 +685,7 @@ color: #808080</string>
    <zorder>addBranchWidget</zorder>
    <zorder>backButton</zorder>
    <zorder>consignmentsWidget_2</zorder>
+   <zorder>consignmentsWidget_3</zorder>
   </widget>
  </widget>
  <resources/>
